--- a/WebsiteCV.html
+++ b/WebsiteCV.html
@@ -8,6 +8,7 @@
         #warning-message { display:none; }
     }
 </style>
+<script>alert("Tolong Di Buka Dengan Internet")</script>
 <div id="wrapper">
 <!DOCTYPE html>
 <html lang="en">
