--- a/WebsiteCV.html
+++ b/WebsiteCV.html
@@ -8,7 +8,7 @@
         #warning-message { display:none; }
     }
 </style>
-<script>alert("Tolong Di Buka Dengan Internet")</script>
+<script>alert("Tolong Di Buka Dengan Internet yang menyala atau gambarnya tidak akan tampil")</script>
 <div id="wrapper">
 <!DOCTYPE html>
 <html lang="en">
